# Coherence-Network

./: .contribution_record.json  .deployment_progress  .dif_payload.json  .dif_request.json  .dif_verify_run.py  .gitattributes  .gitconfig-codex  .gitconfig-temp  .gitconfig.codex  .gitignore  .gitmodules  .idea-progress.md  .mcp.json  .task-checkpoint.md  .task-control  .task-prompt-task_0057087.md  .task-prompt-task_059ae6f.md  .task-prompt-task_069b306.md  .task-prompt-task_08f4dba.md  .task-prompt-task_0fc611b.md  .task-prompt-task_103b222.md  .task-prompt-task_10c53f3.md  .task-prompt-task_118e914.md  .task-prompt-task_12e7bca.md  .task-prompt-task_204baa2.md  .task-prompt-task_20af813.md  .task-prompt-task_23b85ab.md  .task-prompt-task_371e20f.md  .task-prompt-task_372a383.md  .task-prompt-task_403745a.md  .task-prompt-task_49dd13a.md  .task-prompt-task_4d232dc.md  .task-prompt-task_4fc8a4d.md  .task-prompt-task_51a3261.md  .task-prompt-task_5246638.md  .task-prompt-task_5f67695.md  .task-prompt-task_636d1c4.md  .task-prompt-task_647e013.md  .task-prompt-task_6675e38.md  .task-prompt-task_69338a4.md  (+79 more)
api/: .env.example  .gitignore  .task-checkpoint.md  conftest.py  migrate_db.py  pyproject.toml  pytest.ini  requirements.txt  seed_test_nodes.py  setup.py  write_geo_tests.py
api/alembic/versions/: 0001_add_typed_node_edge_constraints.py
api/app/: __init__.py  config_loader.py  main.py
api/app/adapters/: __init__.py  discord_vote_model.py  graph_store.py  postgres_models.py  postgres_store.py
api/app/config/: edge_types.py  node_types.py
api/app/core/: tracing.py  ttl_cache.py
api/app/data/: locale_manifest.json  web_routes.json
api/app/db/: __init__.py  graph_health_repo.py
api/app/form_recipes/: endpoint_gathering_head_value.fk  endpoint_ical_allday.fk  endpoint_ical_field.fk  endpoint_reaction_resonance.fk  endpoint_request_progress.fk
api/app/middleware/: attribution.py  auth.py  rate_limit.py  read_tracking.py  request_duration.py  request_outcomes.py
api/app/models/: INDEX.md  __init__.py  accessible_ontology.py  agent.py  agent_control.py  asset.py  audit_ledger.py  (+62 more)
api/config/: EXTERNAL-VALIDATION.md  api.json  canonical_routes.json  edge_type_registry.json  executor_routing.json  idea_defaults.json  model_routing.json  mvp_acceptance_policy.json  node_type_registry.json  page_lineage.json  prompt_templates.json  prompt_templates_b.json  right_sizing.json  runner.json  settings.json
api/data/: coherence.db
api/scripts/: ab_test_harness.py  agent_runner.py  apply_package_result.py  audit_runtime_surface.py  auto_heal_deploy_gates.py  build_ai_agent_improvement_plan.py  capture_local_tool_baseline.py  check_pipeline.py  check_provider_readiness.py  cleanup_pending_agent_test_tasks.py  cleanup_temp.py  coherence.py  collect_ai_agent_intel.py  commit_progress.py  cursor_fact_report.py  dif_verify_graph_health_files.py  ensure_effective_pipeline.sh  friction_report.py  generate_task_package.py  heal_with_ollama.py  index_github.py  index_npm.py  index_pypi.py  local_runner.py  migrate_local_telemetry_to_db.py  migrate_tracking_domains_to_postgres.py  monitor_pipeline.py  overnight_orchestrator.py  personal_bot_monitor.sh  personal_bot_monitor_service.sh  personal_bot_service.sh  prioritize_ideas.py  process_outputs.sh  project_manager.py  prove_hosted_low_level_tasks.py  provider_wrapper.py  run_autonomous.sh  run_backlog_item.py  run_cli_task_flow_matrix.py  run_meta_questions.py  (+22 more)
api/seed/: pillar_seed.py
api/task_patches/: task_task_4fb50cfe9af49c7e.patch  task_task_7decc269568177cb.patch
api/tests/: INDEX.md  _run_dif_verify.py  conftest.py  core_suite.txt  test_026_pipeline_observability.py  test_036_check_pipeline_hierarchical_view.py  test_037_post_tasks_invalid_task_type_422.py  test_040_backlog_malformed.py  test_040_load_backlog_malformed.py  test_040_project_manager_load_backlog_malformed.py  test_040_project_manager_malformed.py  test_042_project_manager_reset_clears_state.py  test_045_effectiveness_phase_6_7.py  test_045_effectiveness_plan_progress_phase_6_7.py  test_047_heal_completion_issue_resolution.py  test_109_open_responses_interoperability.py  test_113_failed_task_diagnostics_contract.py  test_114_collective_coherence_resonance_flow_friction_health.py  test_114_collective_health_acceptance.py  test_114_collective_health_service_unit.py  test_114_collective_health_spec_acceptance.py  test_169_smart_reap_acceptance.py  test_172_graph_health.py  test_accessible_ontology.py  test_accessible_ontology_contributor_flow.py  test_active_recipe_trace_index.py  test_active_recipe_tracing_form.py  test_agent.py  test_agent_collective_health_extended.py  test_agent_control_plane.py  test_agent_diagnostics_config_editor_api.py  test_agent_diagnostics_overview_api.py  test_agent_e2e.py  test_agent_execute_endpoint.py  test_agent_execution_model_resolution.py  test_agent_execution_prompt.py  test_agent_execution_retry.py  test_agent_execution_task_flow_smart_workflow.py  test_agent_executor_policy.py  test_agent_integration_api.py  (+495 more)
experiments/memory-as-framebuffer-v0/: .gitignore  Cargo.toml  README.md
form/form-kernel-rust/: Cargo.toml  README.md  build-android.sh  production_routes_harness.py  router_bml_proof_harness.py  router_body_harness.py  router_header_passthrough_harness.py  test_serve.py
mcp-server/: README.md  README.template.md  glama.json  index.mjs  package-lock.json  package.json  pulsemcp.json  pyproject.toml  server.json  smithery.yaml
mcp-server-python/: README.md  pyproject.toml
mcp-server-python/coherence_mcp_server/: server.py
mcp-server/coherence_mcp_server/: __init__.py  __main__.py  capture_hook.py  capture_worker.py  form_cli_tools.py  server.py
mcp-server/tests/: test_awareness_streaming.py  test_cross_modal_tools.py  test_federation_tools.py  test_story_protocol_tools.py
pulse/: .gitignore  Dockerfile  README.md  pyproject.toml
pulse/pulse_app/: __init__.py  analysis.py  main.py  models.py  organs.py  probe.py  storage.py
pulse/tests/: test_analysis.py  test_main.py  test_probe.py  test_storage.py
(+8759 files in other folders)
