[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coherence-mcp-server"
version = "0.3.1"
description = "MCP server for the Coherence Network — 22 typed tools for AI agents to browse ideas, trace value chains, link identities, record contributions, and explore the Living Codex ontology."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Coherence Network Contributors" },
]
keywords = [
  "mcp",
  "model-context-protocol",
  "coherence",
  "coherence-network",
  "ai-agent",
  "claude",
  "cursor",
  "windsurf",
  "tools",
  "ideas",
  "specs",
  "identity",
  "attribution",
  "value-chain",
  "traceability",
  "federation",
  "governance",
  "openclaw",
  "open-source",
  "ontology",
  "living-codex",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://coherencycoin.com"
Repository = "https://github.com/seeker71/Coherence-Network"
"Bug Tracker" = "https://github.com/seeker71/Coherence-Network/issues"
Documentation = "https://api.coherencycoin.com/docs"

[project.scripts]
coherence-mcp-server = "coherence_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["coherence_mcp_server"]
