[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "coherence-mcp-server"
version = "0.3.1"
description = "MCP server for Coherence Network — typed tools for ideas, specs, lineage, identity, and contributions (stdio, HTTP API backend)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Coherence Network Contributors" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "coherence-network",
  "ai-agent",
  "ideas",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.28.0",
  "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://coherencycoin.com"
Repository = "https://github.com/seeker71/Coherence-Network"
Documentation = "https://github.com/seeker71/Coherence-Network/tree/main/mcp-server"
"Bug Tracker" = "https://github.com/seeker71/Coherence-Network/issues"

[project.scripts]
coherence-mcp-server = "coherence_mcp_server.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coherence_mcp_server"]
