[package]
name = "form-kernel-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "form-kernel-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny blocking HTTP client for the `fetch` subcommand (network resources).
# Pure Rust, ~200 KB binary impact; zero-async.
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
