[package]
name = "form-kernel-rust"
version = "0.1.0"
edition = "2021"

# Two surfaces, one crate:
#   • [[bin]] form-kernel-rust  — the CLI binary (subprocess path, parity_suite).
#   • [lib]  form_kernel_rust   — Python extension (cdylib) via PyO3, plus
#                                  rlib so the binary still links the same
#                                  modules. Building the bin alone does not
#                                  pull PyO3; pyo3 is gated behind the
#                                  `pyo3` feature, enabled by maturin.
[[bin]]
name = "form-kernel-rust"
path = "src/main.rs"

[lib]
name = "form_kernel_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enabled by maturin when building the Python extension.
pyo3 = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny blocking HTTP client for the `fetch` subcommand (network resources).
# Pure Rust, ~200 KB binary impact; zero-async.
ureq = { version = "2", default-features = false, features = ["tls"] }
# libloading — dynamic load of cdylib .so plugins for the Form→Rust→host JIT
# path. The kernel emits Rust source for a Form recipe, invokes `rustc
# --crate-type=cdylib`, and loads the resulting plugin with libloading.
# Sibling to the TS kernel's `new Function(src)` and the Go kernel's
# `plugin.Open`. ~50 KB binary impact.
libloading = "0.8"
# PyO3 — optional, only pulled when building the Python extension.
# extension-module skips linking libpython (the interpreter provides it).
# abi3-py39 keeps the .so importable across CPython 3.9+ without rebuilds.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
